# sketch-dataset

./: .gitignore  LICENSE  pyproject.toml
datasets/: converter.py  find_duplicate_sketch_artboard.py  find_similar_artboard.py  generate_artboards.py
scripts/: convert_config.py  convert_sketch.py  draw_artboard.py  export_and_find_sim_artboards.py  extract_missing_fonts.py
sketch_dataset/datasets/: __init__.py  converter.py  distribute_all_info_to_transformer_dataset.py  extend_sketch_file_format.py  flat_converted.py
sketch_dataset/sketchtool/: sketchtool.py  sketchtool_wrapper.py
sketch_dataset/utils/: __init__.py
sketchtool/: sketchtool.py  sketchtool_wrapper.py
utils/: __init__.py  sketch_utils.py
